# db-students-teachers-grades

./: cli_script.py  config.ini  my_select.py  pyproject.toml  seed.py
conf/: db.py  models.py
migrations/versions/: 78fca12f4b7a_init.py
