[tool.poetry]
name = "db-students-teachers-grades"
version = "0.1.0"
description = ""
authors = ["Lara <dmilarisa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.24"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
faker = "^22.0.0"
aiosql = "^9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
